# ZAD_3_zmpo

./: CCommand.cpp  CCommand.h  CMakeLists.txt  CMenu.cpp  CMenu.h  CMenuCommand.cpp  CMenuCommand.h  CMenuItem.cpp  CMenuItem.h  ReadFile.cpp  ReadFile.h  main.cpp
CTABLE/: AddClone.cpp  AddClone.h  AddObject.cpp  AddObject.h  ArrayLength.cpp  ArrayLength.h  CTable.cpp  CTable.h  GetInfo.cpp  GetInfo.h  RmAll.cpp  RmAll.h  RmObject.cpp  RmObject.h  SetObjName.cpp  SetObjName.h  SetVal.cpp  SetVal.h  Zad1.cpp  Zad1.h
SAVES/: main.txt
